syntax = "proto3";

package organizations;

option go_package = "github.com/danielhoward314/packet-sentry/protogen/golang/organizations";

import "google/api/annotations.proto";

service OrganizationsService {
  rpc Get(GetOrganizationRequest) returns (GetOrganizationResponse) {
    option (google.api.http) = {
      get: "/v1/organizations/{id}"
    };
  }
  rpc Update (UpdateOrganizationRequest) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/organizations/{id}"
      body: "*"
    };
  }
}
message Empty {}

message GetOrganizationRequest {
  string id = 1;
}

message GetOrganizationResponse {
  string id = 1;
  string organization_name = 2;
  string billing_plan = 3;
  string primary_administrator_email = 4;
  string masked_credit_card = 5;
}

message UpdateOrganizationRequest {
  string id = 1;
  string name = 2;
  string billing_plan = 3;
  PaymentDetails payment_details = 4;
}

message PaymentDetails {
  string card_name = 1;
  string address_line_one = 2;
  string address_line_two = 3;
  string card_number = 4;
  string expiration_month = 5;
  string expiration_year = 6;
  string cvc = 7;
}